--- a/project-kavling12.html
+++ b/project-kavling12.html
@@ -306,7 +306,11 @@
                     class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-105">
             </div>
             <div class="md:col-span-4 flex flex-col gap-6 h-full">
-                <div class="relative flex-1 rounded-3xl overflow-hidden group">
+                <div class="relative flex-1 h-[300px] md:h-auto rounded-3xl overflow-hidden group">
+                    <img src="assets/projects/kavling12_3.webp"
+                        class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-105">
+                </div>
+                <div class="relative flex-1 h-[300px] md:h-auto rounded-3xl overflow-hidden group">
                     <img id="kavling12-4-day" src="assets/projects/kavling12_4.webp"
                         class="absolute inset-0 w-full h-full object-cover transition-all duration-700 z-10 group-hover:scale-105">
                     <img id="kavling12-4-night" src="assets/projects/kavling12_4b.webp"
@@ -334,10 +338,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="relative flex-1 rounded-3xl overflow-hidden group">
-                    <img src="assets/projects/kavling12_3.webp"
-                        class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-105">
                 </div>
             </div>
         </div>
