--- a/project-ahome.html
+++ b/project-ahome.html
@@ -404,7 +404,7 @@
                     "assets/projects/down.jpg"
                 ],
                 "autoLoad": true,
-                "compass": false,
+                "compass": true,
                 "hfov": 100
             });
         });
